--- a/site/src/Components/AboutPage/index.scss
+++ b/site/src/Components/AboutPage/index.scss
@@ -32,3 +32,14 @@ h3 {
 
     margin: 20px;
 }
+
+.page3 {
+    padding-top: 60px;
+}
+
+.page3 h1 {
+    color: $dark;
+    
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
